# Camellia

./: CMakeLists.txt
CATool/: main.cpp
Camellia/: Camellia.cpp
Camellia/Assets/: FileSystem.h  Model.h
Camellia/Core/: Application.h  Window.h
Camellia/Renderer/: Renderer.h
